// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBEMBlock extends getChildContext() with the block value from props 1`] = `
Object {
  "bar": "baz",
  "block": "context-block",
}
`;

exports[`createBEMBlock merges modifiers prop with root node's modifiers 1`] = `
<div
  class="foo foo--mod1 foo--mod2"
/>
`;

exports[`createBEMBlock provides BEM block name via context 1`] = `
Object {
  "block": "context-block",
}
`;
